# IT1307-VRP

./: Cargo.toml  deisgn_notes.md
plot/: out_0.txt  out_1.txt  plot.ipynb
problem_solutions/: out_2.txt  test.txt
src/: main.rs
src/ga/: crossover.rs  fitness_function.rs  initializer.rs  mod.rs  mutator.rs  parent_selector.rs  penalty_function.rs  problem.rs  repair_mechanism.rs  survivor_selection.rs
