[package]
name = "ga-permutation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.48"
rand = "0.8.5"
ordered-float = "3.4.0"
derive_is_enum_variant = "0.1.1"
rayon = "1.7"